--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ejs": "^3.1.9",
     "ejs-locals": "^1.0.2",
     "express": "^4.18.2",
-    "mysql2": "^3.2.4"
+    "mysql2": "^3.2.4",
+    "silly-datetime": "^0.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
